# habit-cortex-orchestrator

./: .env.example  .gitignore  README.md  alembic.ini  migrate_subscriptions.py  nohup.out  pyproject.toml  ql -h localhost -U habit-bre-cortex-orchestrator -d habit-bre-cortex-orchestrator -c SELECT id, event_type, description FROM event_subscriptions WHERE product_id = 2; --pset=pager=off  ql -h localhost -U habit-bre-cortex-orchestrator -d habit-bre-cortex-orchestrator -t -c \d products  release.sh  requirements.txt  start.sh  stop.sh  sync_product7_events.py  test_templates.py  test_templates_db.py
alembic/versions/: add_template_enrichment.py
docs/: 1-environment-variables-ui-guide.md  2-required-environment-variables.md  3-product-configuration-ui-specification.md  3_TEMPLATE_SYSTEM_UI_INSTRUCTIONS.md  4-activity-and-audit-logging-ui-guide.md  API_MQTT_ENDPOINTS.md  MQTT_CONFIGURATION.md  MQTT_IMPLEMENTATION_SUMMARY.md  TEMPLATES_API_REFERENCE.md  TEMPLATES_IMPLEMENTATION.md  TEMPLATES_UI_GUIDE.md  UI_MQTT_SPECIFICATION.md  UI_PRODUCT_DUPLICATION_GUIDE.md  docker-image-building-implementation.md  github-authentication.md  image-status-api.md  ui-extensions-guide.md
migrations/: env.py
migrations/versions/: 3745307866d5_add_email_and_sms_template_tables.py  7319630d809f_add_business_rules_table.py  90da12bca124_add_product_workflows_table.py  b7b0195159c8_split_email_templates_into_custom_and_.py  fdac636bb28b_add_shared_key_to_products_table.py
scripts/: migrate_json_rules_to_db.py
src/orchestrator/: __init__.py  config.py  main.py  security.py  (+1 more)
(+27 files in other folders)
